# industrial-programming-1c-mipt2018

./: README.md
Generating lib/: CMakeLists.txt  generate_lib.py  lib.h  main.cpp
HW1/: HW1.awk  HW1.sh  text.txt
